--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="mensagem_confirmacao_remover_lancamento">Esse registro será removido permanentemente</string>
     <string name="valor_invalido">Informe um valor válido</string>
     <string name="valor_obrigatorio">O valor é obrigatório</string>
+    <string name="sem_lancamentos">Sem lançamentos</string>
+    <string name="excluir_lancamento">Excluir lançamento?</string>
 </resources>
